unpackaged/main/default/objects/Campaign__c/fields/InitialEndDate__c.field-meta.xml
<CustomField>
    <fullName>InitialEndDate__c</fullName>
    <description>Initial end date of the Campaign.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>