unpackaged/main/default/objects/Campaign__c/fields/InitialStartDate__c.field-meta.xml
<CustomField>
    <fullName>InitialStartDate__c</fullName>
    <description>Initial start date of the Campaign.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>