unpackaged/main/default/objects/Campaign__c/fields/January_Budget__c.field-meta.xml
<CustomField>
    <fullName>January_Budget__c</fullName>
    <label>January Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>