unpackaged/main/default/objects/Campaign__c/fields/July_Budget__c.field-meta.xml
<CustomField>
    <fullName>July_Budget__c</fullName>
    <label>July Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>