unpackaged/main/default/objects/Campaign__c/fields/June_Budget__c.field-meta.xml
<CustomField>
    <fullName>June_Budget__c</fullName>
    <label>June Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>