unpackaged/main/default/objects/Campaign__c/fields/March_Budget__c.field-meta.xml
<CustomField>
    <fullName>March_Budget__c</fullName>
    <label>March Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>