unpackaged/main/default/objects/Campaign__c/fields/May_Budget__c.field-meta.xml
<CustomField>
    <fullName>May_Budget__c</fullName>
    <label>May Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>