unpackaged/main/default/objects/Campaign__c/fields/Mirrored_Program__c.field-meta.xml
<CustomField>
    <fullName>Mirrored_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to tie the brand investment campaign to the mirrored program that is created via code.  This field will be used in order to keep the brand investment campaign and the program in sync.</description>
    <label>Mirrored Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Campaigns (Mirrored Program)</relationshipLabel>
    <relationshipName>MirroredCampaigns</relationshipName>
    <type>Lookup</type>
</CustomField>