unpackaged/main/default/objects/Campaign__c/fields/Multi__c.field-meta.xml
<CustomField>
    <fullName>Multi__c</fullName>
    <label>Multicultural</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>