unpackaged/main/default/objects/Campaign__c/fields/November_Budget__c.field-meta.xml
<CustomField>
    <fullName>November_Budget__c</fullName>
    <label>November Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>