unpackaged/main/default/objects/Campaign__c/fields/October_Budget__c.field-meta.xml
<CustomField>
    <fullName>October_Budget__c</fullName>
    <label>October Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>