unpackaged/main/default/objects/Campaign__c/fields/ParentMarketingPlan__c.field-meta.xml
<CustomField>
    <fullName>ParentMarketingPlan__c</fullName>
    <label>Master Marketing Plan</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>MarketingPlan__c.MP_Type__c</field>
            <operation>equals</operation>
            <value>TERRITORY - FIELD</value>
        </filterItems>
        <filterItems>
            <field>MarketingPlan__c.MP_Type__c</field>
            <operation>equals</operation>
            <value>TERRITORY - NATL MKTG</value>
        </filterItems>
        <filterItems>
            <field>MarketingPlan__c.MP_Type__c</field>
            <operation>equals</operation>
            <value>TERRITORY - NATL ACCTS</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MarketingPlan__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>