unpackaged/main/default/objects/Campaign__c/fields/ParentProgramName__c.field-meta.xml
<CustomField>
    <fullName>ParentProgramName__c</fullName>
    <description>Name of the program on the parent marketing plan</description>
    <formula>Related_Priority__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentProgramName</label>
    <type>Text</type>
</CustomField>