unpackaged/main/default/objects/Campaign__c/fields/PlannedCampaignSpend__c.field-meta.xml
<CustomField>
    <fullName>PlannedCampaignSpend__c</fullName>
    <label>Campaign Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>