unpackaged/main/default/objects/Campaign__c/fields/ProgramDescription__c.field-meta.xml
<CustomField>
    <fullName>ProgramDescription__c</fullName>
    <description>The description that was entered and maintained on the mirrored program.</description>
    <formula>Mirrored_Program__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The description that was entered and maintained on the mirrored program by the State Manager.</inlineHelpText>
    <label>Program Description</label>
    <type>Text</type>
</CustomField>