unpackaged/main/default/objects/Campaign__c/fields/RebateCode__c.field-meta.xml
<CustomField>
    <fullName>RebateCode__c</fullName>
    <label>Rebate Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>