unpackaged/main/default/objects/Campaign__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region inherited from parent Marketing Plan.</description>
    <formula>text (ParentMarketingPlan__r.Region__c)</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>